# fractionalize-cnft-skytrade

./: README.md
Fractionalize-cNFT-on-Solana/: Anchor.toml  Readme.md  package-lock.json  package.json
Fractionalize-cNFT-on-Solana/programs/fractionalize-cnft/: Cargo.toml
Fractionalize-cNFT-on-Solana/programs/fractionalize-cnft/src/: lib.rs
Fractionalize-cNFT-on-Solana/tests/: fractionalize-cnft.ts
compressed-nfts/: package-lock.json  package.json
compressed-nfts/src/: create-collection.ts  create-tree.ts  fetch-cnft-details.ts  mint-compressed-nft-to-collection.ts
